--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,15 @@
         "target": "es2020",
         "strict": true,
         "preserveConstEnums": true,
-        // "noEmit": true,
         "sourceMap": false,
         "module": "es2020",
         "moduleResolution": "node",
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
-        "isolatedModules": true
+        "isolatedModules": true,
+        "outDir": "build"
     },
     "exclude": ["node_modules", "**/*.test.ts"],
-    "files": ["lambda.ts"]
+    "files": ["lambda.mts"]
 }
